<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpage_degine"
    tools:context=".AdminloginActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:alpha=".8"
            android:background="@drawable/round_background"
            android:foregroundGravity="center_vertical"
            android:hapticFeedbackEnabled="false"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/admin_login"
                    android:textColor="#000"
                    android:textSize="40sp" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="308dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="19dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextTextPassword4"
                    android:layout_width="301dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:autofillHints=""
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/loginbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="Login"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    app:backgroundTint="@color/purple_700" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/registration"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="163dp"
        android:layout_height="154dp"
        android:layout_gravity="center|top"
        android:contentDescription="@string/todo"
        android:foregroundGravity="top|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999"
        app:srcCompat="@drawable/userr" />

</androidx.constraintlayout.widget.ConstraintLayout>