<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpage_degine"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:alpha=".8"
            android:background="@drawable/round_background"
            android:foregroundGravity="center_vertical"
            android:hapticFeedbackEnabled="false"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/registration"
                    android:textColor="#000"
                    android:textSize="40sp" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginRight="35dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Gender"
                        android:textColor="@color/black"
                        android:textColorLink="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Male"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </RadioGroup>

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="Mobile no."
                    android:inputType="phone"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="E-mali address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:autofillHints=""
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/rbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/button"
                    android:text="@string/register"
                    android:textSize="20sp"
                    app:backgroundTint="@color/purple_700" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Already registered? Login"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Admin Registration"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14999998"
        app:srcCompat="@drawable/round_background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="115dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14999998"
        app:srcCompat="@drawable/profile" />

</androidx.constraintlayout.widget.ConstraintLayout>